
Incompatible changes
--------------------
- cache: the ``/cache/prediction`` configuration property has been reorganized
  into ``/cache/prefetch/expiring`` and ``/cache/prefetch/prediction``, changing
  the default behaviour as well. See the `relevant documentation section
  <https://www.knot-resolver.cz/documentation/latest/config-cache-predict.html>`_
  for more.
- /local-data/root-fallback-addresses-file: only allow one file (and call it singular)
  Using multiple sets of fallback addresses does not work anyway (!1534).

Bugfixes
--------
- fix startup with `dnssec: false` (!1548)


Knot Resolver 6.0.7 (2024-03-27)
================================

Improvements
------------
- manager: clear the cache via management HTTP API (#876, !1491)
- manager: added support for Python 3.12 and removed for 3.7 (!1502)
- manager: use build-time install prefix to execute `kresd` instead of PATH (!1511)
- docs: documentation is now separated into user and developer parts (!1514)
- daemon: ignore UDP requests from ports < 1024 (!1507)
- manager: increase startup timeout for processes (!1518, !1520)
- local-data: increase default DB size to 2G on 64-bit platforms (!1518)

Bugfixes
--------
- fix listening by interface name containing dashes (#900, !1500)
- fix kresctl http request timeout (!1505)
- fix RPZ if it contains apex NS record (!1516)
- fix RPZ if SOA is repated, as usual in AXFR output (!1521)
- avoid RPZ overriding the root SOA (!1521)
- fix on 32-bit systems with 64-bit time_t (!1510)
- fix paths to knot-dns libs if exec_prefix != prefix (!1503)
- manager: add missing early check that neither a custom port nor TLS is set for
  authoritative server forwarding (#902, !1505)


Knot Resolver 6.0.6 (2024-02-13)
================================

Security
--------
- CVE-2023-50868: NSEC3 closest encloser proof can exhaust CPU

  * validator: lower the NSEC3 iteration limit (150 -> 50)
  * validator: similarly also limit excessive NSEC3 salt length